# squeaky-clean

./: .gitignore  BENCHMARK_METHODOLOGY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: architecture.md  architecture_recovery.md  architecture_recovery_refactoring_and_mcda.md  extending.md  infrastructure_layer_design.md  logo.txt  notation.md  overview.md  recovery_refactoring_pipeline.md  roadmap.md  squib.md  writing_a_problem_spec.md
eval/: d2_entity_icp_ablation.py
eval/comparison_v2/ep_producer/: problem.json  problem_java.json  problem_ts.json
eval/comparison_v2/p0_calculator/: problem.json
eval/comparison_v2/p1_todo_manager/: problem.json
eval/comparison_v2/p3_chat_app/: problem.json
eval/comparison_v2/p5_oauth2_server/: problem.json
eval/contracts/: events.raw.json
eval/custom_patterns/: example_event_sourced_aggregate.json
eval/mcda_scores/: blob_storage.json  document_db.json  grpc_client.json  grpc_server_handler.json  kv_cache.json  message_queue_consumer.json  message_queue_producer.json  observability_logger.json  relational_db.json  rest_client.json  rest_server_handler.json  search.json  secrets_provider.json  stream_processor.json  websocket_server_handler.json
eval/per_agent/: REPORT.md  __init__.py  blob_storage_adapter_icp_metric.py  compare_entity_icp.py  entity_icp_metric.py  optimize_entity_icp.py  run_blob_adapter_fixture.py
eval/problems/: p0_calculator.py  p0_calculator_go.py  p0_calculator_java.py  p0_calculator_js.py  p0_calculator_rust.py  p0_calculator_ts.py  p1_todo_manager.py  p1_todo_manager_java.py  p1_todo_manager_js.py  p1_todo_manager_ts.py  p2_ecommerce_cart.py  p2_ecommerce_cart_java.py  p2_ecommerce_cart_js.py  p2_ecommerce_cart_ts.py  p3_chat_app.py  p3_chat_app_java.py  p3_chat_app_js.py  p3_chat_app_ts.py  p4_twitter_clone.py  p5_oauth2_server.py
eval/reports/: cache_floor.md
eval/tech_specs/: _schema.v1.json
examples/event_pipeline/: README.md  persister_problem.json  producer_problem.json  producer_problem_with_contract.json
examples/todo_api/: README.md  todo_problem.json
examples/twitter_clone/: README.md  twitter_problem.json
scripts/: build_dashboard.py  pre-commit-secret-scan  scan_for_secrets.py
scripts/comparison/: __init__.py  baseline_gateway.py  baseline_metrics.py  coverage_collector.py  decomposition_metrics.py  file_block_parser.py  integrate_squeaky_run.py  problem_spec_to_prose.py  project_materializer.py  retry_loop.py  run_comparison.py  squeaky_shim.py
scripts/comparison/prompt_templates/: framing_1_practical_brief.md  retry_template_v1.md  test_generator_v1.md
scripts/comparison_v2/: __init__.py  aggregate_haiku_sweep.py  neutral_suite_runner.py  run_v2.py
squeaky_clean/application/dtos/: class_assignment.py  compile_result.py  complexity_score.py  composer_stats.py  contract.py  contract_field.py  contract_ref.py  cost_budget.py  custom_pattern_manifest.py  data_classification.py  derived_infrastructure_choice.py  entity_lifecycle.py  eval_metrics.py  eval_report_bundle.py  eval_result_dto.py  expected_outcome.py  file_stats.py  fix_candidate.py  fix_request.py  fix_result.py  implemented_class.py  infrastructure_category.py  infrastructure_choice.py  install_result.py  instantiated_icp_prompt.py  integration_request.py  integration_result.py  language_toolkit.py  mcda_criterion.py  mcda_score_table.py  mcda_weights.py  metrics_inputs.py  module_implementation.py  problem_spec.py  prompt_cache_config.py  query_semantic.py  regression_record.py  replicate_summary.py  retry_policy.py  run_checkpoint.py  (+19 more)
squeaky_clean/application/use_cases/: architectural_complexity_scorer.py  architecture_merger.py  architecture_spec_serializer.py  assign_patterns.py  assign_patterns_paths.py  budget_exit_handler.py  budget_exit_writer.py  budgeted_gateway.py  build_manifest_generator.py  build_manifest_helpers.py  build_manifest_registry.py  build_manifest_templates.py  cache_savings_calculator.py  cache_summary_renderer.py  cargo_toml_generator.py  check_test_obligations.py  checkpoint_checksum.py  checkpoint_emitter.py  checkpoint_reader.py  checkpoint_writer.py  class_assignment_formatter.py  class_paths_block_renderer.py  compile_gate.py  compose_agent_spec.py  (+162 more)
tests/agent_unit_evals/: test_h5a_per_agent_fixtures.py  test_h5b_per_agent_fixtures.py  test_icp_unit.py  test_principal_architect_unit.py  test_prompt_optimizer.py  test_shared_test_architect.py  test_test_architect_unit.py
tests/integration/: test_phase2_live.py  test_phase3_live.py  test_phase4_live.py
tests/interface/: test_h5a_agent_specs.py  test_h5b_agent_specs.py  test_security_icps_present.py
(+880 files in other folders)
